--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
+    "@tailwindcss/cli": "^4.1.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
-    "crypto-js": "^4.2.0",
     "chart.js": "^4.4.7",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.0.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "tailwindcss": "^4.1.11",
     "tesseract.js": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
