--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
-    "@tailwindcss/cli": "^4.1.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,7 +25,6 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.11",
     "tesseract.js": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
